--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/chr1sp1n/drussets.git"
+  },
+  "bin": {
+		"drussets": "./index.js"
+  },
+	"engines": {
+		"node": ">= 0.10"
 	}
 }
