--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "author": "Chr1Sp1n-Dev",
   "license": "ISC",
-  "devDependencies": {
+  "devDependencies": {},
+  "dependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "gulp": "^4.0.2"
   },
-  "dependencies": {},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/chr1sp1n/drussets.git"
