--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   "devDependencies": {},
   "dependencies": {
     "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
-    "gulp": "^4.0.2"
+    "babel-preset-es2015": "^6.24.1",    
+    "gulp": "^4.0.2",
+    "path": "^0.12.7",
+    "path-exists": "^4.0.0"
   },
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/chr1sp1n/drussets.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chr1sp1n/drussets.git"
   },
   "bin": {
-		"drussets": "./index.js"
+    "drussets": "./index.js"
   },
-	"engines": {
-		"node": ">= 0.10"
-	}
+  "engines": {
+    "node": ">= 0.10"
+  }
 }
