--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "devDependencies": {},
   "dependencies": {
     "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",    
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-rename": "^1.4.0",
     "path": "^0.12.7",
-    "path-exists": "^4.0.0"
+    "path-exists": "^4.0.0",
+    "require-dir": "^1.2.0"
   },
   "repository": {
     "type": "git",
