--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "description": "Drupal assets utility",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "drussets": "/usr/bin/node index.js"
   },
   "author": "Chr1Sp1n-Dev",
   "license": "ISC",
   "devDependencies": {},
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
+    "gulp-plumber": "^1.2.1",
     "gulp-rename": "^1.4.0",
     "path": "^0.12.7",
     "path-exists": "^4.0.0",
