--- a/default.config.json
+++ b/default.config.json
@@ -5,7 +5,8 @@
 		"dist": "../themes_dist/custom/theme_name/libraries"
 	},
 	"assets":{
-		"path": "./src"
+		"path": "./src",
+		"libraries": "/libraries"
 	},
 	"css":{
 		"src": "./src/libraries",
