--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "autoprefixer": "^9.6.1",
+    "browser-sync": "^2.26.7",
     "colors": "^1.3.3",
     "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
